--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -8,3 +8,5 @@ jobs:
         steps:
             - name: code
               uses: actions/checkout@v4
+            - name: run app
+              run: python проход_по_группам_и_прожатие_участвоваеть.py
