--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -8,5 +8,7 @@ jobs:
         steps:
             - name: code
               uses: actions/checkout@v4
+            - neme: install requirements
+              run: pip install -r requirements.txt
             - name: run app
               run: python проход_по_группам_и_прожатие_участвоваеть.py
