--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,225 @@
-os
-random
-time
-io
-fake-useragent
-pyautogui
-threading
-openpyxl
-requests
-Pillow
-pywin32
-selenium
-selenium-wire
-geckodriver
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+altgraph==0.17.4
+annotated-types==0.7.0
+anyio==4.3.0
+Appium-Python-Client==4.3.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asgiref==3.8.1
+astroid==3.2.4
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==23.2.0
+autodistill==0.1.28
+autodistill-gpt-4o==0.1.5
+autodistill-gpt-4v==0.1.5
+babel==2.16.0
+beautifulsoup4==4.12.3
+behave==1.2.6
+bleach==6.2.0
+Brotli==1.1.0
+cattrs==24.1.0
+certifi==2024.8.30
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudscraper==1.2.71
+colorama==0.4.6
+comm==0.2.2
+comtypes==1.4.7
+contourpy==1.2.1
+curl_cffi==0.7.1
+cycler==0.12.1
+debugpy==1.8.11
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.8
+distro==1.9.0
+Django==5.0.4
+et-xmlfile==1.1.0
+executing==2.0.1
+fake-useragent==1.5.1
+Faker==35.0.0
+fastjsonschema==2.21.1
+filelock==3.15.4
+flatbuffers==24.3.25
+fonttools==4.53.1
+fqdn==1.5.1
+frozenlist==1.4.1
+fsspec==2024.6.1
+g4f==0.3.3.3
+greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+huggingface==0.0.1
+huggingface-hub==0.25.1
+idna==3.6
+ipykernel==6.29.5
+ipython==8.26.0
+ipywidgets==8.1.3
+isoduration==20.11.0
+isort==5.13.2
+jedi==0.19.1
+Jinja2==3.1.4
+jiter==0.5.0
+json5==0.10.0
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.11.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.15.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.3.4
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.11
+keyboard==0.13.5
+kiwisolver==1.4.5
+lxml==5.3.0
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+mistune==3.1.0
+mouse==0.7.1
+MouseInfo==0.1.3
+mpmath==1.3.0
+multidict==6.0.5
+mutagen==1.47.0
+nbclient==0.10.2
+nbconvert==7.16.5
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.3
+notebook==7.3.2
+notebook_shim==0.2.4
+numpy==1.26.4
+openai==1.44.1
+opencv-python==4.9.0.80
+opencv-python-headless==4.10.0.84
+openmeteo_requests==1.3.0
+openmeteo_sdk==1.14.1
+openpyxl==3.1.2
+outcome==1.3.0.post0
+overrides==7.7.0
+packaging==24.1
+pandas==2.2.2
+pandocfilters==1.5.1
+parse==1.20.2
+parse_type==0.6.4
+parso==0.8.4
+pefile==2023.2.7
+pillow==10.3.0
+platformdirs==4.2.2
+praw==7.7.1
+prawcore==2.4.0
+prometheus_client==0.21.1
+prompt_toolkit==3.0.47
+psutil==6.1.0
+psycopg2==2.9.9
+pure-eval==0.2.2
+pyaes==1.6.1
+pyasn1==0.6.0
+PyAutoGUI==0.9.54
+pycparser==2.22
+pycryptodome==3.20.0
+pycryptodomex==3.21.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+pygame==2.5.2
+PyGetWindow==0.0.9
+Pygments==2.18.0
+pyinstaller==6.11.0
+pyinstaller-hooks-contrib==2024.9
+pylint==3.2.7
+PyMsgBox==1.0.9
+pynput==1.7.7
+pyparsing==3.1.2
+pyperclip==1.8.2
+PyRect==0.2.0
+Pyrogram==2.0.106
+PyScreeze==0.1.30
+pyserial==3.5
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-json-logger==3.2.1
+python-telegram-bot==21.1.1
+pytube==15.0.0
+pytweening==1.2.0
+pytz==2024.1
+
+pywin32-ctypes==0.2.3
+
+pywinpty==2.0.14
+PyYAML==6.0.2
+pyzmq==26.2.0
+quotes==0.0.3
+referencing==0.35.1
+regex==2024.7.24
+requests==2.32.3
+requests-cache==1.2.1
+requests-toolbelt==1.0.0
+retry-requests==2.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.22.3
+rsa==4.9
+safetensors==0.4.4
+scapy==2.5.0
+scipy==1.14.0
+screeninfo==0.8.1
+selenium==4.26.1
+Send2Trash==1.8.3
+setuptools==72.2.0
+six==1.16.0
+sniffio==1.3.1
+snscrape==0.7.0.20230622
+sortedcontainers==2.4.0
+soupsieve==2.6
+SQLAlchemy==2.0.29
+sqlparse==0.4.4
+stack-data==0.6.3
+supervision==0.22.0
+sympy==1.13.2
+telegram==0.0.1
+Telethon==1.36.0
+terminado==0.18.1
+tinycss2==1.4.0
+tokenizers==0.20.0
+tomlkit==0.13.2
+
+
+
+trio-websocket==0.11.1
+types-python-dateutil==2.9.0.20241206
+typing_extensions==4.11.0
+tzdata==2024.1
+update-checker==0.18.0
+uri-template==1.3.0
+url-normalize==1.4.3
+urllib3==2.2.1
+useragent==0.1.1
+vk-api==11.9.9
+wcwidth==0.2.13
+webcolors==24.11.1
+webdriver-manager==4.0.2
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==13.1
+widgetsnbextension==4.0.11
+wsproto==1.2.0
+yadisk==3.1.0
+yarl==1.10.0
+yt-dlp==2024.10.7
+
+
