--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 et_xmlfile==2.0.0
+fake-useragent==2.0.3
 h11==0.14.0
 idna==3.10
 openpyxl==3.1.5
