--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -8,6 +8,15 @@ jobs:
         steps:
             - name: code
               uses: actions/checkout@v4
+            - name: Load .env file
+              uses: actions/load-environment-variables@v1
+              with:
+                path: .env
+            - name: Set up Firefox
+              uses: actions/setup-firefox@v1
+              with:
+                version: latest
+                profile: ${{ env.FIREFOX_PROFILE }}
             - name: install requirements
               run: pip install -r requirements.txt
             - name: run app
