--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -10,10 +10,7 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Setup Firefox
-              uses: web-platform-tests/wpt-action@v1
-              with:
-                browser: firefox
-                version: latest
+              uses: actions/setup-firefox@latest
 
             - name: install requirements
               run: pip install -r requirements.txt
